--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -269,7 +269,7 @@ label{
 
     #Responsive-nav{
 
-        position: absolute;
+        position: fixed;
         display: flex;
         width: 100vw;
         height: 100vh;
