--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -47,7 +47,7 @@
 
 
 html{
-    background-image: url(images/background.png);
+    background-image: url(images/background.jpeg);
     background-size: cover;
 }
 
